--- a/css/style.css
+++ b/css/style.css
@@ -1,99 +1,159 @@
-
-/* Global Styling */
-
 * {
-	box-sizing: border-box;
-	font-family: "Arial", sans-serif;
+	margin: 0;
+	padding: 0;
 }
+/* Simple Responsive Framework */
 
-/* Global Header Styling */
-
-.header {
-	background-color: #D3D3D3;
-}
-#page-title {
-	padding: 10px;
-}
-/* Global Body Content Styling*/
-
-.menu-section {
+.row {
 	border: 1px solid black;
-}
+	width: 90%;
+	}
+.section {
+	border: 1px solid black;
+	width: 90%;
+	margin-right: auto;
+	margin-left: auto;
+	margin: 20px;
 
+}
 .menu-heading {
 	position: relative;
 	float: right;
-	background-color: #ffffff;
 	border-bottom: 1px solid black;
 	border-left: 1px solid black;
-	padding: 5px;
+	padding: 8px;
 
 }
 .menu-content {
-	clear: right;
-	padding: 15px;
-	overflow: hidden;
+	padding: 10px;
+	clear: both;
 }
 
-/* Individual Menu Section Styling */
-
-#chicken {
-	background-color: #87add4;
-}
-#chicken .menu-heading {
-	background-color: #1a6dc1;
-	color: white;
-}
-
-#beef {
-	background-color: #b8e1b7;
-}
-
-#beef .menu-heading {
-	background-color: #41a23f;
-	color: white;
-}
-
-#sushi {
-	background-color: #d17b7c
-}
-
-#sushi .menu-heading {
-	background-color: #c2292b;
-	color: white;
-}
-/* Mobile Breakpoints & Styling */
-@media (max-width: 767px) {
-	.menu-section {
-		width: 100%;
-	}
-}
-
-/*Tablet Breakpoints & Styling */
-@media (min-width: 768px) and (max-width: 991px) {
-
-	#chicken,
-	#beef {
-		width: 50%;
-		position: relative;
-	}
-	#chicken {
-		float: left;
-	}
-	#beef {
-		float: right;
-	}
-	#sushi {
-		clear: both;
-	}
-}
-
-/* Desktop Breakpoints & Styling */
+/********** Large devices only **********/
 @media (min-width: 992px) {
-
-	.menu-section {
-		width: 33.33%;
-		float: left;
-	}
+  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
+    float: left;
+  }
+  .col-lg-1 {
+    width: 8.33%;
+  }
+  .col-lg-2 {
+    width: 16.66%;
+  }
+  .col-lg-3 {
+    width: 25%;
+  }
+  .col-lg-4 {
+    width: 33.33%;
+  }
+  .col-lg-5 {
+    width: 41.66%;
+  }
+  .col-lg-6 {
+    width: 50%;
+  }
+  .col-lg-7 {
+    width: 58.33%;
+  }
+  .col-lg-8 {
+    width: 66.66%;
+  }
+  .col-lg-9 {
+    width: 74.99%;
+  }
+  .col-lg-10 {
+    width: 83.33%;
+  }
+  .col-lg-11 {
+    width: 91.66%;
+  }
+  .col-lg-12 {
+    width: 100%;
+  }
 }
 
+/********** Medium devices only **********/
+@media (min-width: 768px) and (max-width: 991px) {
+  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
+    float: left;
+  }
+  .col-md-1 {
+    width: 8.33%;
+  }
+  .col-md-2 {
+    width: 16.66%;
+  }
+  .col-md-3 {
+    width: 25%;
+  }
+  .col-md-4 {
+    width: 33.33%;
+  }
+  .col-md-5 {
+    width: 41.66%;
+  }
+  .col-md-6 {
+    width: 50%;
+  }
+  .col-md-7 {
+    width: 58.33%;
+  }
+  .col-md-8 {
+    width: 66.66%;
+  }
+  .col-md-9 {
+    width: 74.99%;
+  }
+  .col-md-10 {
+    width: 83.33%;
+  }
+  .col-md-11 {
+    width: 91.66%;
+  }
+  .col-md-12 {
+    width: 100%;
+  }
+}
+
+/********** Small devices only **********/
+@media (max-width: 767px) {
+  .col-sm-1, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-sm-10, .col-sm-11, .col-sm-12 {
+    float: left;
+  }
+  .col-sm-1 {
+    width: 8.33%;
+  }
+  .col-sm-2 {
+    width: 16.66%;
+  }
+  .col-sm-3 {
+    width: 25%;
+  }
+  .col-sm-4 {
+    width: 33.33%;
+  }
+  .col-sm-5 {
+    width: 41.66%;
+  }
+  .col-sm-6 {
+    width: 50%;
+  }
+  .col-sm-7 {
+    width: 58.33%;
+  }
+  .col-sm-8 {
+    width: 66.66%;
+  }
+  .col-sm-9 {
+    width: 74.99%;
+  }
+  .col-sm-10 {
+    width: 83.33%;
+  }
+  .col-sm-11 {
+    width: 91.66%;
+  }
+  .col-sm-12 {
+    width: 100%;
+  }
+}
